--- a/user_settings.json
+++ b/user_settings.json
@@ -1,1 +1,1 @@
-{"complexity": 5, "restrictions": ["Vegan"], "cuisine": "Chinese"}
+{"complexity": 4, "restrictions": ["Lactose Intolerant", "Vegan"], "cuisine": "Chinese"}
