--- a/user_settings.json
+++ b/user_settings.json
@@ -1,1 +1,1 @@
-{"complexity": 5, "restrictions": ["Vegetarian"], "cuisine": "Mexican"}
+{"complexity": 5, "restrictions": ["Vegetarian"], "cuisine": "Chinese"}
